@@ -1,24 +1,49 @@
 // src/main/java/esprit/pfe/serviceformation/Services/InscriptionService.java
-package esprit.pfe.serviceformation.Services;
+package esprit.pfe.serviceformation.services;
 
-import esprit.pfe.serviceformation.DTO.*;
-import esprit.pfe.serviceformation.Entities.*;
-import esprit.pfe.serviceformation.Repositories.*;
+import esprit.pfe.serviceformation.dto.*;
+import esprit.pfe.serviceformation.entities.*;
+import esprit.pfe.serviceformation.repositories.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Lazy;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class InscriptionService {
+    private static final String FORMATION_INTROUVABLE = "Formation introuvable";
+
+    private final FormationRepository formationRepo;
+    private final EnseignantRepository enseignantRepo;
+    private final InscriptionRepository inscriptionRepo;
+    private final FormationCompetenceRepository formationCompetenceRepo;
+    private final InscriptionService self;
+    private final FormationMapper formationMapper;
+
     @Autowired
-    FormationRepository formationRepo;
-    @Autowired
-    EnseignantRepository enseignantRepo;
-    @Autowired
-    InscriptionRepository inscriptionRepo;
+    public InscriptionService(FormationRepository formationRepo,
+                              EnseignantRepository enseignantRepo,
+                              InscriptionRepository inscriptionRepo,
+                              FormationCompetenceRepository formationCompetenceRepo,
+                              @Lazy InscriptionService self,
+                              FormationMapper formationMapper) {
+        this.formationRepo = formationRepo;
+        this.enseignantRepo = enseignantRepo;
+        this.inscriptionRepo = inscriptionRepo;
+        this.formationCompetenceRepo = formationCompetenceRepo;
+        this.self = self;
+        this.formationMapper = formationMapper;
+    }
 
 
     /**
@@ -27,19 +52,20 @@ public class InscriptionService {
      * - et soit ouverte à tous (ouverte == true), soit liée à son UP
      */
     @Transactional
-    public List<FormationDTO> listerFormationsAccessibles(String enseignantId) {
+    public List<FormationResponseDTO> listerFormationsAccessibles(String enseignantId) {
         Enseignant ens = enseignantRepo.findById(enseignantId)
+                .or(() -> enseignantRepo.findByMail(enseignantId))
+                .or(() -> enseignantRepo.findByMailIgnoreCase(enseignantId))
                 .orElseThrow(() -> new IllegalArgumentException("Enseignant introuvable"));
         String upEns = ens.getUp() != null ? ens.getUp().getId() : null;
 
         return formationRepo.findAll().stream()
                 .filter(Formation::isInscriptionsOuvertes) // visibles
-                .filter(f ->
-                        f.isOuverte()                            // ouvertes à tous
-                                || (f.getUp() != null && f.getUp().getId().equals(upEns)) // ou UP correspond
+                .filter(f -> f.isOuverte() // ouvertes à tous
+                        || (f.getUp() != null && f.getUp().getId().equals(upEns)) // ou UP correspond
                 )
-                .map(this::mapFormationToDTO)               // conversion en DTO
-                .collect(Collectors.toList());
+                .map(formationMapper::toResponseDTO)
+                .toList();
     }
 
     /**
@@ -51,13 +77,15 @@ public class InscriptionService {
     public Inscription demanderInscription(Long formationId, String enseignantId) {
         // 1. Vérifications préalables
         Formation f = formationRepo.findById(formationId)
-                .orElseThrow(() -> new IllegalArgumentException("Formation introuvable"));
+                .orElseThrow(() -> new IllegalArgumentException(FORMATION_INTROUVABLE));
 
         if (!f.isInscriptionsOuvertes()) {
             throw new IllegalStateException("Cette formation n'est pas visible pour inscription");
         }
 
         Enseignant e = enseignantRepo.findById(enseignantId)
+                .or(() -> enseignantRepo.findByMail(enseignantId))
+                .or(() -> enseignantRepo.findByMailIgnoreCase(enseignantId))
                 .orElseThrow(() -> new IllegalArgumentException("Enseignant introuvable"));
 
         String upForm = f.getUp() != null ? f.getUp().getId() : null;
@@ -67,12 +95,15 @@ public class InscriptionService {
             throw new IllegalStateException("Vous n’êtes pas autorisé à vous inscrire à cette formation");
         }
 
-        // 2. Création de l'entité
+        // 2. Vérification du chevauchement de dates
+        validateNoOverlap(enseignantId, f);
+
+        // 3. Création de l'entité
         Inscription ins = new Inscription();
         ins.setFormation(f);
         ins.setEnseignant(e);
 
-        // 3. Tentative de sauvegarde avec gestion de doublon
+        // 4. Tentative de sauvegarde avec gestion de doublon
         try {
             return inscriptionRepo.save(ins);
         } catch (Exception ex) {
@@ -81,45 +112,146 @@ public class InscriptionService {
         }
     }
 
+    private void validateNoOverlap(String enseignantId, Formation f) {
+        List<Inscription> existingInscriptions = inscriptionRepo.findByEnseignant_Id(enseignantId);
+        for (Inscription existing : existingInscriptions) {
+            if (existing.getEtat() != EtatInscription.REJECTED) {
+                Formation existingF = existing.getFormation();
+                if (isOverlapping(existingF, f)) {
+                    throw new IllegalStateException(
+                            "Chevauchement détecté avec la formation: " + existingF.getTitreFormation());
+                }
+            }
+        }
+    }
+
+    private boolean isOverlapping(Formation f1, Formation f2) {
+        if (f1.getDateDebut() == null || f1.getDateFin() == null || f2.getDateDebut() == null || f2.getDateFin() == null) {
+            return false;
+        }
+        return f1.getDateDebut().compareTo(f2.getDateFin()) <= 0
+                && f1.getDateFin().compareTo(f2.getDateDebut()) >= 0;
+    }
+
+    /**
+     * Vue globale : toutes les inscriptions (toutes formations confondues), paginées.
+     * Réservée aux rôles d'administration (ADMIN / CUP / D2F).
+     */
+    @Transactional(readOnly = true)
+    public Page<InscriptionDTO> listerToutesInscriptions(Pageable pageable) {
+        return inscriptionRepo.findAll(pageable).map(this::mapInscriptionToDTO);
+    }
+
+    @Transactional(readOnly = true)
+    public Page<InscriptionDTO> listerInscriptionsParFormation(Long formationId, Pageable pageable) {
+        formationRepo.findById(formationId)
+                .orElseThrow(() -> new IllegalArgumentException(FORMATION_INTROUVABLE));
+        return inscriptionRepo
+                .findByFormation_IdFormation(formationId, pageable)
+                .map(this::mapInscriptionToDTO);
+    }
 
     /**
      * 3. Lister les demandes PENDING pour D2F ou CUP
      */
-    /*public List<Inscription> listerDemandes(String userId, boolean isD2F) {
-        if (isD2F) {
-            return inscriptionRepo.findByEtat(EtatInscription.PENDING);
-        } else {
-            Enseignant cup = enseignantRepo.findById(userId)
-                    .orElseThrow(() -> new IllegalArgumentException("Utilisateur introuvable"));
-            String upId = cup.getUp() != null ? cup.getUp().getId() : "";
-            return inscriptionRepo.findByEtat(EtatInscription.PENDING).stream()
-                    .filter(i -> {
-                        var f = i.getFormation();
-                        return f.getUp() != null && f.getUp().getId().equals(upId);
-                    })
-                    .toList();
-        }
-    }*/
+    @Transactional(readOnly = true)
     public List<InscriptionDTO> listerInscriptionsParFormation(Long formationId) {
         formationRepo.findById(formationId)
-                .orElseThrow(() -> new IllegalArgumentException("Formation introuvable"));
+                .orElseThrow(() -> new IllegalArgumentException(FORMATION_INTROUVABLE));
         return inscriptionRepo
                 .findByFormation_IdFormation(formationId)
                 .stream()
                 .map(this::mapInscriptionToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional(readOnly = true)
+    public Page<FormationResponseDTO> listerFormationsAccessibles(String enseignantId, Pageable pageable) {
+        List<FormationResponseDTO> all = self.listerFormationsAccessibles(enseignantId);
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), all.size());
+        List<FormationResponseDTO> slice = (start >= all.size()) ? List.of() : all.subList(start, end);
+        return new PageImpl<>(slice, pageable, all.size());
+    }
+
     /**
-     * 4. Approuver ou rejeter une demande
+     * 4. Approuver ou rejeter une demande (motif de rejet optionnel).
+     */
+    @Transactional
+    public Inscription traiterDemande(Long inscriptionId, boolean approuver, String motif) {
+        return doTraiterDemande(inscriptionId, approuver, motif);
+    }
+
+    /**
+     * Surcharge rétro-compatible : pas de motif.
      */
     @Transactional
     public Inscription traiterDemande(Long inscriptionId, boolean approuver) {
+        return doTraiterDemande(inscriptionId, approuver, null);
+    }
+
+    private Inscription doTraiterDemande(Long inscriptionId, boolean approuver, String motif) {
         Inscription ins = inscriptionRepo.findById(inscriptionId)
                 .orElseThrow(() -> new IllegalArgumentException("Demande introuvable"));
         ins.setEtat(approuver
                 ? EtatInscription.APPROVED
                 : EtatInscription.REJECTED);
+        if (!approuver) {
+            String trimmed = motif == null ? null : motif.trim();
+            ins.setMotif((trimmed == null || trimmed.isEmpty()) ? null : trimmed);
+        } else {
+            ins.setMotif(null);
+        }
+        ins.setDateTraitement(OffsetDateTime.now(ZoneId.systemDefault()));
         return inscriptionRepo.save(ins);
+    }
+
+    /**
+     * P3 - F4 : traitement en lot d'un ensemble de demandes. Itère sur les ids
+     * fournis et délègue à {@link #traiterDemande(Long, boolean, String)} pour
+     * bénéficier de la même logique (motif, horodatage, persistance). Les
+     * inscriptions inexistantes sont silencieusement ignorées pour ne pas faire
+     * échouer tout le lot à cause d'un id supprimé entre-temps.
+     */
+    @Transactional
+    public List<Inscription> traiterDemandeBulk(List<Long> inscriptionIds, boolean approuver, String motif) {
+        if (inscriptionIds == null || inscriptionIds.isEmpty()) {
+            return List.of();
+        }
+        return inscriptionIds.stream()
+                .filter(Objects::nonNull)
+                .distinct()
+                .map(id -> {
+                    try {
+                        return self.traiterDemande(id, approuver, motif);
+                    } catch (IllegalArgumentException notFound) {
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    /**
+     * Annulation d'une demande PENDING par l'enseignant qui en est propriétaire.
+     * - Refuse si l'inscription n'existe pas
+     * - Refuse si l'enseignantId fourni ne correspond pas au propriétaire
+     *   (sauf si appelant côté admin/CUP/D2F : géré au niveau controller via @PreAuthorize)
+     * - Refuse si l'état n'est pas PENDING
+     */
+    @Transactional
+    public void annulerInscription(Long inscriptionId, String enseignantId) {
+        Inscription ins = inscriptionRepo.findById(inscriptionId)
+                .orElseThrow(() -> new IllegalArgumentException("Demande introuvable"));
+        if (enseignantId != null
+                && ins.getEnseignant() != null
+                && !enseignantId.equalsIgnoreCase(ins.getEnseignant().getId())) {
+            throw new IllegalStateException("Vous n'êtes pas autorisé à annuler cette demande.");
+        }
+        if (ins.getEtat() != EtatInscription.PENDING) {
+            throw new IllegalStateException("Seules les demandes en attente peuvent être annulées.");
+        }
+        inscriptionRepo.delete(ins);
     }
 
     public SeanceDTO mapSeanceToDTO(SeanceFormation seance) {
@@ -129,12 +261,12 @@ public class InscriptionService {
         dto.setHeureDebut(seance.getHeureDebut());
         dto.setHeureFin(seance.getHeureFin());
         dto.setSalle(seance.getSalle());
+        dto.setOnlineMeetingUrl(seance.getOnlineMeetingUrl());
         dto.setContenus(seance.getContenus());
         dto.setMethodes(seance.getMethodes());
         dto.setTypeSeance(seance.getTypeSeance());
         dto.setDureePratique(seance.getDureePratique());
         dto.setDureeTheorique(seance.getDureeTheorique());
-
 
         if (seance.getAnimateurs() != null) {
             dto.setAnimateurs(seance.getAnimateurs().stream().map(this::mapEnseignantToDTO).toList());
@@ -144,6 +276,7 @@ public class InscriptionService {
         }
         return dto;
     }
+
     public EnseignantDTO mapEnseignantToDTO(Enseignant ens) {
         EnseignantDTO dto = new EnseignantDTO();
         dto.setId(ens.getId());
@@ -151,67 +284,96 @@ public class InscriptionService {
         dto.setPrenom(ens.getPrenom());
         dto.setMail(ens.getMail());
         dto.setType(ens.getType());
-        dto.setDeptLibelle(ens.getDept().getLibelle());
-        dto.setUpLibelle(ens.getUp().getLibelle());
-        return dto;
-    }
-    public FormationDTO mapFormationToDTO(Formation formation) {
-        FormationDTO dto = new FormationDTO();
-        dto.setIdFormation(formation.getIdFormation());
-        dto.setTitreFormation(formation.getTitreFormation());
-        dto.setTypeFormation(formation.getTypeFormation().toString());
-        dto.setDateDebut(formation.getDateDebut());
-        dto.setDateFin(formation.getDateFin());
-        dto.setEtatFormation(formation.getEtatFormation().toString());
-        dto.setCoutFormation(formation.getCoutFormation());
-        dto.setOrganismeRefExterne(formation.getOrganismeRefExterne());
-        dto.setCoutHebergement(formation.getCoutHebergement());
-        dto.setCoutFormation(formation.getCoutFormation());
-        dto.setCoutRepas(formation.getCoutRepas());
-        dto.setCoutTransport(formation.getCoutTransport());
-        dto.setAcquis(formation.getAcquis());
-        dto.setDomaine(formation.getDomaine());
-        dto.setEvalMethods(formation.getEvalMethods());
-        dto.setIndicateurs(formation.getIndicateurs());
-        dto.setObjectifs(formation.getObjectifs());
-        dto.setObjectifsPedago(formation.getObjectifsPedago());
-        dto.setPopulationCible(formation.getPopulationCible());
-        dto.setExterneFormateurEmail(formation.getExterneFormateurEmail());
-        dto.setExterneFormateurNom(formation.getExterneFormateurNom());
-        dto.setExterneFormateurPrenom(formation.getExterneFormateurPrenom());
-        dto.setPrerequis(formation.getPrerequis());
-        dto.setChargeHoraireGlobal(formation.getChargeHoraireGlobal());
-        dto.setOuverte(formation.isOuverte());
-        dto.setInscriptionsOuvertes(formation.isInscriptionsOuvertes());
-        if (formation.getSeances() != null) {
-            dto.setSeances(formation.getSeances().stream().map(this::mapSeanceToDTO).toList());
+        // Null-safe access to avoid NPE when Dept or UP is not assigned
+        if (ens.getDept() != null) {
+            dto.setDeptLibelle(ens.getDept().getLibelle());
         }
-        // Transformation pour département
-        if (formation.getDepartement() != null) {
-            DeptDTO deptDTO = new DeptDTO();
-            deptDTO.setId(formation.getDepartement().getId());
-            deptDTO.setLibelle(formation.getDepartement().getLibelle());
-            dto.setDepartement1(deptDTO);
-        }
-        // Transformation pour UP
-        if (formation.getUp() != null) {
-            UpDTO upDTO = new UpDTO();
-            upDTO.setId(formation.getUp().getId());
-            upDTO.setLibelle(formation.getUp().getLibelle());
-            dto.setUp1(upDTO);
+        if (ens.getUp() != null) {
+            dto.setUpLibelle(ens.getUp().getLibelle());
         }
         return dto;
     }
-    // dans InscriptionService.java
+
     public InscriptionDTO mapInscriptionToDTO(Inscription ins) {
         InscriptionDTO dto = new InscriptionDTO();
         dto.setId(ins.getId());
-        dto.setFormation(mapFormationToDTO(ins.getFormation()));
+        dto.setFormation(formationMapper.toResponseDTO(ins.getFormation()));
         dto.setEnseignant(mapEnseignantToDTO(ins.getEnseignant()));
         dto.setEtat(ins.getEtat().toString());
         dto.setDateDemande(ins.getDateDemande());
+        dto.setDateTraitement(ins.getDateTraitement());
+        dto.setMotif(ins.getMotif());
         return dto;
     }
 
+    @Transactional
+    public InscriptionDTO demanderInscriptionDTO(Long formationId, String enseignantId) {
+        return mapInscriptionToDTO(self.demanderInscription(formationId, enseignantId));
+    }
 
+    @Transactional
+    public InscriptionDTO traiterDemandeDTO(Long inscriptionId, boolean approuver) {
+        return self.traiterDemandeDTO(inscriptionId, approuver, null);
+    }
+
+    @Transactional
+    public InscriptionDTO traiterDemandeDTO(Long inscriptionId, boolean approuver, String motif) {
+        return mapInscriptionToDTO(self.traiterDemande(inscriptionId, approuver, motif));
+    }
+
+    /**
+     * P3 - F4 : traitement en lot renvoyant les DTO mappés.
+     */
+    @Transactional
+    public List<InscriptionDTO> traiterDemandeBulkDTO(List<Long> inscriptionIds, boolean approuver, String motif) {
+        return self.traiterDemandeBulk(inscriptionIds, approuver, motif)
+                .stream()
+                .map(this::mapInscriptionToDTO)
+                .toList();
+    }
+
+    @Transactional
+    public void annulerInscriptionDTO(Long inscriptionId, String enseignantId) {
+        self.annulerInscription(inscriptionId, enseignantId);
+    }
+
+    @Transactional(readOnly = true)
+    public Page<InscriptionSummaryDTO> findSummariesByCurrentUser(String emailOrUsername, Pageable pageable) {
+        Enseignant ens = enseignantRepo.findById(emailOrUsername)
+                .or(() -> enseignantRepo.findByMail(emailOrUsername))
+                .or(() -> enseignantRepo.findByMailIgnoreCase(emailOrUsername))
+                .orElseThrow(() -> new IllegalArgumentException("Enseignant introuvable pour l'utilisateur : " + emailOrUsername));
+        return self.findSummariesByEnseignantId(ens.getId(), pageable);
+    }
+
+    @Transactional(readOnly = true)
+    public Page<InscriptionSummaryDTO> findSummariesByEnseignantId(String enseignantId, Pageable pageable) {
+        return inscriptionRepo
+                .findByEnseignant_Id(enseignantId, pageable)
+                .map(this::toSummary);
+    }
+
+    private InscriptionSummaryDTO toSummary(Inscription ins) {
+        Formation f = ins.getFormation();
+        List<String> competences = formationCompetenceRepo
+                .findByFormationIdFormation(f.getIdFormation())
+                .stream()
+                .map(fc -> fc.getCompetenceNom() != null ? fc.getCompetenceNom() : String.valueOf(fc.getCompetenceId()))
+                .toList();
+
+        return InscriptionSummaryDTO.builder()
+                .id(ins.getId())
+                .formationId(String.valueOf(f.getIdFormation()))
+                .titreFormation(f.getTitreFormation())
+                .dateDebut(f.getDateDebut() != null ? f.getDateDebut().toString() : "")
+                .dateFin(f.getDateFin() != null ? f.getDateFin().toString() : "")
+                .chargeHoraire(String.valueOf(f.getChargeHoraireGlobal()))
+                .etatFormation(f.getEtatFormation() != null ? f.getEtatFormation().name() : "")
+                .competencesCiblees(competences)
+                .etat(ins.getEtat() != null ? ins.getEtat().name() : null)
+                .dateDemande(ins.getDateDemande() != null ? ins.getDateDemande().toString() : null)
+                .dateTraitement(ins.getDateTraitement() != null ? ins.getDateTraitement().toString() : null)
+                .motif(ins.getMotif())
+                .build();
+    }
 }
